# flexible_ddcm

./: .envrc  .gitignore  .pre-commit-config.yaml  __init__.py  environment.yml  pyproject.toml
flexible_ddcm/: model_spec_utils.py  rewards.py  shared.py  simulate.py  solve.py  state_space.py  transitions.py
flexible_ddcm/example/: external_probabilities_extended.csv  input_estimation.py  input_functions.py  params.csv  params.yaml  run.py  specification.yaml
flexible_ddcm/example/base/: input_functions.py  params.csv  run.py  specification.yaml
flexible_ddcm/example/types/: input_estimation.py  input_functions.py  params.csv  run.py  specification.yaml
flexible_ddcm/tests/: create_reg_tests.py  test_input.py  test_regression.py  test_simulation.py  test_solution.py  test_spec_tools.py  test_state_space.py
flexible_ddcm/tests/resources/: .~lock.external_probabilities.csv#  external_probabilities.csv  input_functions.py  params.csv  run.py  specification.yaml
model/: processing.py  shared.py  solve.py  transitions.py  utils.py
model/example/: input_functions.py
src/flexible_ddcm/: estimation_utils.py  model_spec_utils.py  rewards.py  shared.py  simulate.py  solve.py  state_space.py  transitions.py
src/flexible_ddcm/example/base/: external_probabilities.csv  input_functions.py  run.py  specification.yaml
src/flexible_ddcm/tests/: create_reg_tests.py  test_regression.py  test_simulation.py  test_solution.py  test_spec_tools.py  test_state_space.py
tests/resources/: .~lock.external_probabilities.csv#  external_probabilities.csv  input_estimation.py
(+6 files in other folders)
